# pplug-backlight

./: .gitignore  README.md  meson.build
data/: meson.build
docs/: code.md
po/: POTFILES.in  linggen  meson.build  pl.po
src/: backlight.c  backlight.cpp  backlight.h  backlight.hpp  backlight.xml  brightness.c  brightness.h  meson.build
